# Next

- Improves cover loading priority handling
- Minor search performance improvements

# 6.3.3

- Fixes narrow layout config slider not applying immediately

# 6.3.2

- Fixes notification popup in playlist-view
- Updates text background shadow for plasma 6.6
- Minor code improvements

# 6.3.1

- Minor code cleanup

# 6.3.0

- Adds colorful background to footer with player-controls

# 6.2.1

- Pling timed out during package upload resulting causing trouble. Just bump a new version to hopefully fix it.

# 6.2.0

- Adds configuration option for layout breaking point in manager

# 6.1.2

- Fixes layout on deleting playlists
- Fixes library breaking if song has no title-tag
- Fixes saving queue as playlist dialog issues (6.1.0 regression)
- Fixes certain cover images not loading

# 6.1.1

- Fixes clicking on album icon in Artist view broken (6.1.0 regression)
- Fixes hitting enter on keyboard navigated file plays wrong song in queue

# 6.1.0

- Compatibility update for plasma 6.6
- Significant performance improvements in the manager for large libraries
- Fix uneven list layout
- Keyboard shortcut changes for selecting items: A for select all, B for selecting neighboring songs from the same albums, V for neighboring songs from the same album-artist. Shift+A/B/V deselects in the same modes. 
- Better handling of empty libraries

# 6.0.4

- Code refactoring for better maintainability
- Adds some confirmation popups on Artists and Playlists page 
- Improves error message display

# 6.0.3

- Adds little confirmation popup when adding items to the queue
- Fixes queue item removal and reordering
- Some more Qt 6 transition 

# 6.0.2

- Adds background highlight to currently playing queue-item
- Changes "Select All" shortcut to "A"
- Fixes word wrapping for long titles
- Fixes song context menu target not spanning whole row
- Removes undesired, automatic mnemonics from nav and volume buttons

# 6.0.1

- Fixes version string in metadata

# 6.0.0
